--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
     "@payloadcms/live-preview-react": "3.0.0-beta.67",
     "@payloadcms/next": "3.0.0-beta.67",
     "@payloadcms/plugin-cloud": "3.0.0-beta.67",
+    "@payloadcms/plugin-cloud-storage": "3.0.0-beta.67",
     "@payloadcms/plugin-form-builder": "3.0.0-beta.67",
     "@payloadcms/plugin-nested-docs": "3.0.0-beta.67",
     "@payloadcms/plugin-redirects": "3.0.0-beta.67",
     "@payloadcms/plugin-seo": "3.0.0-beta.67",
     "@payloadcms/richtext-lexical": "3.0.0-beta.67",
+    "@payloadcms/storage-vercel-blob": "3.0.0-beta.67",
     "@payloadcms/ui": "3.0.0-beta.67",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/blob": "^0.23.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
